--- a/target-mips/TODO
+++ b/target-mips/TODO
@@ -7,8 +7,7 @@ General
   - MIPS16
   - MDMX
   - SmartMIPS
-  - DSP r1
-  - DSP r2
+  - microMIPS DSP r1 & r2 encodings
 - MT ASE only partially implemented and not functional
 - Shadow register support only partially implemented,
   lacks set switching on interrupt/exception.
